--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+/babylproject/db.sqlite3
+/extras
+/babylproject/babylproject/settings.py
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -134,3 +138,4 @@ API
 Training
 Blog
 About
+
