--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 astroid==2.2.5
+awscli==1.16.218
 awsebcli==3.15.3
 blessed==1.15.0
 botocore==1.12.208
@@ -21,6 +22,7 @@ docker-pycreds==0.4.0
 dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.14
+ez-setup==0.9
 future==0.16.0
 idna==2.7
 isort==4.3.21
@@ -31,6 +33,8 @@ Markdown==3.1.1
 mccabe==0.6.1
 oauthlib==3.1.0
 pathspec==0.5.9
+psycopg2==2.8.3
+pyasn1==0.4.6
 pylint==2.3.1
 pylint-django==2.0.11
 pylint-plugin-utils==0.5
@@ -41,6 +45,8 @@ pytz==2019.1
 PyYAML==3.13
 requests==2.20.1
 requests-oauthlib==1.2.0
+rsa==3.4.2
+s3transfer==0.2.1
 semantic-version==2.5.0
 six==1.11.0
 sqlparse==0.3.0
