--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-
 # Elastic Beanstalk Files
-.elasticbeanstalk/*
+!.elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
