--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -1,7 +1,7 @@
 option_settings:
   "aws:elasticbeanstalk:application:environment":
-    DJANGO_SETTINGS_MODULE: "iotd.settings"
-    "PYTHONPATH": "/opt/python/current/app/iotd:$PYTHONPATH"
+    DJANGO_SETTINGS_MODULE: "babylproject.settings"
+    "PYTHONPATH": "/opt/python/current/app/babylproject:$PYTHONPATH"
   "aws:elasticbeanstalk:container:python":
     WSGIPath: babylproject/babylproject/wsgi.py
     NumProcesses: 3
