--- a/.elasticbeanstalk/babyl-django-env.env.yml
+++ b/.elasticbeanstalk/babyl-django-env.env.yml
@@ -68,7 +68,7 @@ awseb-e-vmtywzxjmn-stack-AWSEBSecurityGroup-OVVDBWWHIEGY
     NumProcesses: '1'
     NumThreads: '15'
     StaticFiles: /static/=static/
-    WSGIPath: babylproject/wsgi.py
+    WSGIPath: babylproject/babylproject/wsgi.py
   aws:elasticbeanstalk:container:python:staticfiles:
     /static/: static/
   aws:elasticbeanstalk:control:
