--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -3,7 +3,7 @@ option_settings:
     DJANGO_SETTINGS_MODULE: "babylproject.settings"
     "PYTHONPATH": "/opt/python/current/app/babylproject:$PYTHONPATH"
   "aws:elasticbeanstalk:container:python":
-    WSGIPath: babylproject/babylproject/wsgi.py
+    WSGIPath: babylproject/wsgi.py
     NumProcesses: 3
     NumThreads: 20
   "aws:elasticbeanstalk:container:python:staticfiles":
