--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -1,3 +1,13 @@
+container_commands:
+  01_migrate:
+    command: "source /opt/python/run/venv/bin/activate && python babylproject/manage.py migrate --noinput"
+    leader_only: true
+  02_createsu:
+    command: "source /opt/python/run/venv/bin/activate && python babylproject/manage.py createsu"
+    leader_only: true
+  03_collectstatic:
+    command: "source /opt/python/run/venv/bin/activate && python babylproject/manage.py collectstatic --noinput"
+
 option_settings:
   "aws:elasticbeanstalk:application:environment":
     DJANGO_SETTINGS_MODULE: "babylproject.settings"
